# ultra-fast-copy

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  UltraFastCopy-Setup.spec  pyproject.toml  ufCopy.spec  ufCopyTool.spec  version_info_cli.txt  version_info_gui.txt
docs/: architecture.md  benchmark.md  troubleshooting.md
experiments/: native_copy.cpp  native_copy2.cpp  ntfs_block_copy.cpp
scripts/: benchmark.ps1  block_benchmark.ps1  build.ps1  build_experiments.ps1  copy_with_av_exclusion.ps1  entry_cli.py  entry_gui.py  installer.py  make_icon.py  make_manual.py
src/fast_transfer/: __init__.py
src/fast_transfer/cli/: __init__.py  app.py  commands.py  renderer.py
src/fast_transfer/config/: __init__.py  defaults.py  settings.py
src/fast_transfer/core/: __init__.py  checkpoint.py  conflict.py  control.py  copier.py  engine.py  errors.py  events.py  models.py  mover.py  planner.py  scanner.py  verifier.py  winapi.py
src/fast_transfer/gui/: __init__.py  app.py  file_pane.py  icon.py  main_window.py  models.py  settings_dialog.py  theme.py  transfer_widget.py  worker.py
src/fast_transfer/integration/: __init__.py  context_menu.py
src/fast_transfer/utils/: __init__.py  formatting.py  logging.py  paths.py  system.py
tests/: conftest.py
tests/integration/: test_transfer.py
tests/unit/: test_conflict.py  test_paths.py  test_planner_scanner.py  test_support.py
