[project]
name = "ultra-fast-copy"
version = "0.1.0"
description = "Ultra Fast Copy - high performance file copy/move engine for Windows (CLI + PyQt6 GUI)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "CodeciderLab" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "psutil>=5.9",
    "xxhash>=3.4",
    "PySide6>=6.6",
    "send2trash>=1.8",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyinstaller>=6.6",
]

[project.scripts]
ufCopy = "fast_transfer.cli.app:main"

[project.gui-scripts]
ufCopyTool = "fast_transfer.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fast_transfer"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
# Qt dictates these: camelCase signals/overrides, and QModelIndex() defaults
# are part of the QAbstractItemModel signature.
"src/fast_transfer/gui/*" = ["N802", "N815", "B008"]

[tool.mypy]
python_version = "3.12"
packages = ["fast_transfer"]
mypy_path = "src"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

# The PyQt6 stubs type most accessors as Optional (widget.header() -> QHeaderView | None)
# and require exact override signatures. Checking that here produces noise about Qt's API
# rather than about this code, so the union/override checks are relaxed for the GUI only.
# The core engine stays fully checked.
[[tool.mypy.overrides]]
module = "fast_transfer.gui.*"
disable_error_code = ["union-attr", "override", "assignment", "arg-type", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "performance: performance benchmarks (deselect with -m 'not performance')",
]
